# polyslicer

./: .gitignore  BoundingBox.h  CMakeLists.txt  Color.h  Contour.h  EdgeTable.cpp  EdgeTable.h  Image.cpp  Image.h  Layer.h  LineSegment.h  LodePNG.cpp  LodePNG.h  LodePNGImage.cpp  LodePNGImage.h  Node.h  PeakMemory.h  Point.h  Polygon.cpp  Polygon.h  PolygonSlicer.cpp  PolygonSlicer.h  README.md  ScanlineFill.cpp  ScanlineFill.h  Timer.h  Triangle.h  TriangleMesh.h  Vector3.h  bblocky.stl  main.cpp  pisa.stl
parts/: cube_10x10x10.stl
rasterize/: EdgeTable.cpp  Image.cpp  Image.h  JsonUtils.cpp  JsonUtils.h  Node.cpp  Node.h  Point.cpp  Polygon.cpp  Polygon.h  main.cpp  main2.cpp
unittests/: CMakeLists.txt  EdgeList.cpp  EdgeListTest.cpp  ScanlineFillTest.cpp  main.cpp
